--- a/index.html
+++ b/index.html
@@ -1720,7 +1720,7 @@
                                 <div class="content-box">
                                     <div class="info">
                                         <span class="designation">بنیان گذار</span>
-                                        <h3>حمید رضا بردرانی</h3>
+                                        <h3>رامبد جوان</h3>
                                     </div>
                                     <figure class="thumb-box">
                                         <img src="static/charitable/images/team/team-1.png" alt="">
