--- a/index.html
+++ b/index.html
@@ -1816,7 +1816,7 @@
                                 <div class="content-box">
                                     <div class="info">
                                         <span class="designation">بنیان گذار</span>
-                                        <h3>حمید رضا بردرانی</h3>
+                                        <h3>رامبد جوان</h3>
                                     </div>
                                     <figure class="thumb-box">
                                         <img src="static/charitable/images/team/team-1.png" alt="">
@@ -1912,7 +1912,7 @@
                                 <div class="content-box">
                                     <div class="info">
                                         <span class="designation">بنیان گذار</span>
-                                        <h3>حمید رضا بردرانی</h3>
+                                        <h3>رامبد جوان</h3>
                                     </div>
                                     <figure class="thumb-box">
                                         <img src="static/charitable/images/team/team-1.png" alt="">
